--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">07:37 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Fire - Unknown</td>
             <td data-label="Street Name">POND FORK RD</td>
             <td data-label="City">WHARTON</td>
             <td data-label="Cross Streets">LEONOR LN (0.1 miles) and LARKSPUR LN (0.4 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Wharton-Barrett VFD</td>
           </tr>
         
           <tr>
