--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               
           <tr>
             <td data-label="Time Reported">10:01 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Animal Complaint/Rescue</td>
             <td data-label="Street Name">HUDSON LN</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">LOW GAP RD (201.9 feet) and CADDY LN (205.5 feet)</td>
