--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:04 AM</td>
+            <td data-label="Incident">MVC - Injury</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">SYLVESTER</td>
+            <td data-label="Cross Streets">INDIGO LN (0.8 miles) and SENG CREEK RD (120.2 feet)</td>
+            <td data-label="Responding Agencies">Racine VFD, Whitesville VFD, Boone County Ambulance Authority, Boone County Sheriff's Office, Whitesville EMS</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:19 AM</td>
             <td data-label="Incident">Transport to KDU</td>
             <td data-label="Street Name">KENMORE DR</td>
