--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:20 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">NEWBOLT LN</td>
+            <td data-label="City">HEWETT</td>
+            <td data-label="Cross Streets">MISSOURI FORK RD (0.0 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:14 PM</td>
             <td data-label="Incident">Call Complaintant</td>
             <td data-label="Street Name">ADLER LN</td>
