--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:25 PM</td>
+            <td data-label="Incident">Attempt to Serve</td>
+            <td data-label="Street Name">UPPER BIGSON RD</td>
+            <td data-label="City">VAN</td>
+            <td data-label="Cross Streets">EMMA THOMPSON ADDITION RD (161.8 feet)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:20 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">NEWBOLT LN</td>
