--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:09 PM</td>
+            <td data-label="Incident">Traffic Stop</td>
+            <td data-label="Street Name">ROCK CASTLE RD</td>
+            <td data-label="City">SETH</td>
+            <td data-label="Cross Streets">PRENTER RD (46.9 feet) and HENSLEY HOLW (0.3 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">01:20 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">NEWBOLT LN</td>
