--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">02:09 PM</td>
+            <td data-label="Time Reported">02:16 PM</td>
             <td data-label="Incident">Traffic Stop</td>
-            <td data-label="Street Name">ROCK CASTLE RD</td>
-            <td data-label="City">SETH</td>
-            <td data-label="Cross Streets">PRENTER RD (46.9 feet) and HENSLEY HOLW (0.3 miles)</td>
+            <td data-label="Street Name">JULIAN RD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">KATO LN (0.1 miles) and BREEDLOVE LN (0.6 miles)</td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
