--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">02:16 PM</td>
-            <td data-label="Incident">Traffic Stop</td>
-            <td data-label="Street Name">JULIAN RD</td>
-            <td data-label="City">JULIAN</td>
-            <td data-label="Cross Streets">KATO LN (0.1 miles) and BREEDLOVE LN (0.6 miles)</td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+            <td data-label="Time Reported">02:22 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">38.211415, -81.829734</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets">ROBERT C BYRD FWY SB (0.3 miles) and RIVER ISLAND RD (0.9 miles)</td>
+            <td data-label="Responding Agencies"></td>
           </tr>
         
           <tr>
