--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">07:42 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">KENDALL LN</td>
             <td data-label="City">BLOOMINGROSE</td>
             <td data-label="Cross Streets">TONEYS BRANCH RD (184.0 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Whitesville EMS</td>
           </tr>
         
           <tr>
