--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">08:17 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Breaking and Entering</td>
             <td data-label="Street Name">DUSK LN</td>
             <td data-label="City">BOB WHITE</td>
             <td data-label="Cross Streets">EARLY LN (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
