--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">FOURTH AVE W</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">THIRD ST W (135.3 feet) and SECOND ST W (135.7 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
             </tbody>
