--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <td data-label="Incident">Domestic Violence</td>
             <td data-label="Street Name">FOURTH AVE W</td>
             <td data-label="City">MADISON</td>
-            <td data-label="Cross Streets">THIRD ST W (135.3 feet) and SECOND ST W (135.7 feet)</td>
+            <td data-label="Cross Streets">THIRD ST W (67.6 feet) and THIRD ST W (72.1 feet)</td>
             <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
