--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:13 AM</td>
+            <td data-label="Incident">Motor Vehicle Collision</td>
+            <td data-label="Street Name">CARROW LN</td>
+            <td data-label="City">RIDGEVIEW</td>
+            <td data-label="Cross Streets">CAMP CREEK RD (213.4 feet)</td>
+            <td data-label="Responding Agencies">Danville VFD, Morrisvale VFD, Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:52 AM</td>
             <td data-label="Incident">Assist</td>
             <td data-label="Street Name">SIX MILE RD</td>
