--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">CARROW LN</td>
             <td data-label="City">RIDGEVIEW</td>
             <td data-label="Cross Streets">CAMP CREEK RD (213.4 feet)</td>
-            <td data-label="Responding Agencies">Danville VFD, Morrisvale VFD, Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Danville VFD, Morrisvale VFD, Boone County Ambulance Authority, WV State Police</td>
           </tr>
         
           <tr>
