--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:36 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">STOLLINGS RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:13 AM</td>
             <td data-label="Incident">Motor Vehicle Collision</td>
             <td data-label="Street Name">CARROW LN</td>
