--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">05:36 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Assist</td>
             <td data-label="Street Name">STOLLINGS RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">BCEMA</td>
           </tr>
         
           <tr>
