--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:21 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">SIX MILE RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">RAMAGE RD (0.1 miles) and UPLAND LN (0.3 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:36 AM</td>
             <td data-label="Incident">Assist</td>
             <td data-label="Street Name">STOLLINGS RD</td>
