--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">OLD RIVER RD</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">CUB LN (50.0 feet) and LINCOLN CT (0.3 miles)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office, Madison PD</td>
           </tr>
         
           <tr>
