--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:13 AM</td>
+            <td data-label="Incident">Motor Vehicle Collision</td>
+            <td data-label="Street Name"></td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Danville VFD, Spruce River VFD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">08:50 AM</td>
             <td data-label="Incident">MVC - Injury</td>
             <td data-label="Street Name">OLD RIVER RD</td>
