--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">09:13 AM</td>
+            <td data-label="Time Reported">10:29 AM</td>
             <td data-label="Incident">Motor Vehicle Collision</td>
-            <td data-label="Street Name">SIX MILE RD</td>
+            <td data-label="Street Name">RAMAGE RD</td>
             <td data-label="City">DANVILLE</td>
-            <td data-label="Cross Streets">NOBLE LN (158.0 feet) and RICHARD LN (0.2 miles)</td>
-            <td data-label="Responding Agencies">Danville VFD, Spruce River VFD, Boone County Sheriff's Office</td>
+            <td data-label="Cross Streets">SIX MILE RD (15.7 feet)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
             </tbody>
