--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:23 AM</td>
+            <td data-label="Incident">Injured Person</td>
+            <td data-label="Street Name">HORSE BRANCH HOLLOW RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">LICK CREEK RD (0.4 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:43 AM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">KENMORE DR</td>
