--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:54 PM</td>
+            <td data-label="Incident">Unconscious</td>
+            <td data-label="Street Name">DANIEL BOONE PKWY</td>
+            <td data-label="City">FOSTER</td>
+            <td data-label="Cross Streets">CHANCE LN (170.2 feet) and BRAXTON LN (191.0 feet)</td>
+            <td data-label="Responding Agencies">Danville VFD, Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">03:35 PM</td>
             <td data-label="Incident">Interfacility Transport</td>
             <td data-label="Street Name">MADISON AVE</td>
