--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:29 PM</td>
+            <td data-label="Incident">Fight</td>
+            <td data-label="Street Name">SPRUCE RIVER RD</td>
+            <td data-label="City">JEFFREY</td>
+            <td data-label="Cross Streets">BIAS BRANCH RD (0.4 miles) and SECOAL CIR (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:20 PM</td>
             <td data-label="Incident">Animal Complaint/Rescue</td>
             <td data-label="Street Name">S MAIN ST</td>
