--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">SPRUCE RIVER RD</td>
             <td data-label="City">JEFFREY</td>
             <td data-label="Cross Streets">BIAS BRANCH RD (0.4 miles) and SECOAL CIR (0.1 miles)</td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office, WV State Police</td>
           </tr>
         
           <tr>
