--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">BALL FORK RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">LOW GAP RD (0.1 miles)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Danville VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
