--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">07:50 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Harassment</td>
             <td data-label="Street Name">PRICE BRANCH RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">FIELDCREST LN (229.4 feet) and RISTER LN (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
