--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">ROBERT C BYRD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office, WV State Police</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office, WV State Police</td>
           </tr>
         
           <tr>
