--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">HEYWOOD LN</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">PRICE BRANCH RD (162.7 feet) and IRELAND CIR (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
