--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:18 PM</td>
+            <td data-label="Incident">Injured Person</td>
+            <td data-label="Street Name">VOLUNTEER ST</td>
+            <td data-label="City">RACINE</td>
+            <td data-label="Cross Streets">COAL RIVER RD (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:00 PM</td>
             <td data-label="Incident">Threats</td>
             <td data-label="Street Name">HEYWOOD LN</td>
