--- a/index.html
+++ b/index.html
@@ -155,16 +155,7 @@
             <td data-label="Street Name">IRELAND CIR</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">VENTRUE DR (91.7 feet) and NILS LN (0.2 miles)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">08:28 PM</td>
-            <td data-label="Incident">Interfacility Transport</td>
-            <td data-label="Street Name">MADISON AVE</td>
-            <td data-label="City">MADISON</td>
-            <td data-label="Cross Streets">ORCHARD DR (0.1 miles) and HILL VIEW DR (0.1 miles)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Danville VFD, Boone County Ambulance Authority</td>
           </tr>
         
             </tbody>
