--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:55 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">38.086847, -81.815239</td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets">FIELDCREST LN (128.6 feet) and RISTER LN (0.2 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:23 PM</td>
             <td data-label="Incident">Burns</td>
             <td data-label="Street Name">IRELAND CIR</td>
