--- a/index.html
+++ b/index.html
@@ -155,16 +155,7 @@
             <td data-label="Street Name">JULIAN AREA</td>
             <td data-label="City"></td>
             <td data-label="Cross Streets"></td>
-            <td data-label="Responding Agencies">WV State Police</td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">10:23 PM</td>
-            <td data-label="Incident">Burns</td>
-            <td data-label="Street Name">IRELAND CIR</td>
-            <td data-label="City">DANVILLE</td>
-            <td data-label="Cross Streets">VENTRUE DR (91.7 feet) and NILS LN (0.2 miles)</td>
-            <td data-label="Responding Agencies">Danville VFD, Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">WV State Police, WV State Police</td>
           </tr>
         
             </tbody>
