--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:46 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">THIRD ST</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">JACKSON AVE (207.2 feet) and BOONE AVE (231.0 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:11 AM</td>
             <td data-label="Incident">Fall</td>
             <td data-label="Street Name">HEWETT CREEK RD</td>
