--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:38 AM</td>
+            <td data-label="Incident">Burglar Alarm - Audible</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">WHITESVILLE</td>
+            <td data-label="Cross Streets">EMILY LN (128.0 feet) and JANIE AVE (226.8 feet)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:11 AM</td>
             <td data-label="Incident">Fall</td>
             <td data-label="Street Name">HEWETT CREEK RD</td>
