--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:55 AM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">COVERT BRANCH RD</td>
+            <td data-label="City">CHAPMANVILLE</td>
+            <td data-label="Cross Streets">ROBERT C BYRD FWY NB (0.2 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">07:38 AM</td>
             <td data-label="Incident">Burglar Alarm - Audible</td>
             <td data-label="Street Name">COAL RIVER RD</td>
