--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:44 AM</td>
+            <td data-label="Incident">Motorist Assist</td>
+            <td data-label="Street Name">SHORT CREEK RD</td>
+            <td data-label="City">RACINE</td>
+            <td data-label="Cross Streets">COAL RIVER RD (179.8 feet) and DANIEL BOONE PKWY (86.3 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">08:34 AM</td>
             <td data-label="Incident">MVC - Unknown</td>
             <td data-label="Street Name">LONG BRANCH RD</td>
