--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">09:23 AM</td>
+            <td data-label="Incident">Animal Complaint/Rescue</td>
+            <td data-label="Street Name"></td>
+            <td data-label="City"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office, Madison PD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">09:05 AM</td>
             <td data-label="Incident">MVC - Unknown</td>
             <td data-label="Street Name">HILL VALLEY DR</td>
