--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:50 PM</td>
+            <td data-label="Incident">MVC - Unknown</td>
+            <td data-label="Street Name">BUNTING ROAD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">ROBERT C BYRD FWY SB (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:35 PM</td>
             <td data-label="Incident">Motor Vehicle Collision</td>
             <td data-label="Street Name">SHORT CREEK RD</td>
