--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
               
           <tr>
             <td data-label="Time Reported">01:12 PM</td>
-            <td data-label="Incident"></td>
-            <td data-label="Street Name"></td>
-            <td data-label="City"></td>
-            <td data-label="Cross Streets"></td>
+            <td data-label="Incident">MVC - No Injury</td>
+            <td data-label="Street Name">BIGSON DR</td>
+            <td data-label="City">VAN</td>
+            <td data-label="Cross Streets">BIGSON CHURCH RD (51.4 feet)</td>
             <td data-label="Responding Agencies"></td>
           </tr>
         
