--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">LEONOR LN</td>
             <td data-label="City">WHARTON</td>
             <td data-label="Cross Streets">POND FORK RD (0.1 miles)</td>
-            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
